--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"No tests specified\"",
-    "deploy": "gh-pages -d public"
+    "deploy": "gh-pages -d ."
   },
   "keywords": [],
   "author": "",
